sass variables and colors

--- a/sass/utilities/_bgColors.scss
+++ b/sass/utilities/_bgColors.scss
@@ -13,7 +13,7 @@
     &-soft {
         background-color: $color_secondary-light;
     }
-    &-3dark {
+    &-dark {
         background-color: $color_secondary-dark;
     }
 }
