--- a/sass/index.scss
+++ b/sass/index.scss
@@ -10,6 +10,7 @@
 @import "utilities/bgColors";
 @import "utilities/textColors";
 @import "utilities/unit";
+@import "utilities/font";
 
 // layout
 @import "layout";
