--- a/css/index.css
+++ b/css/index.css
@@ -116,7 +116,7 @@ a {
 .bg-secondary-soft {
   background-color: #4a4a4a;
 }
-.bg-secondary-3dark {
+.bg-secondary-dark {
   background-color: #1b1b1b;
 }
 
@@ -290,6 +290,23 @@ a {
   width: 100%;
 }
 
+.fw-light {
+  font-weight: 300;
+  font-size: small;
+}
+.fw-normal {
+  font-weight: 500;
+  font-size: medium;
+}
+.fw-bold {
+  font-weight: 900;
+  font-size: large;
+}
+
+.fs-1 {
+  font-size: 1rem;
+}
+
 .d-flex {
   display: flex;
 }
@@ -378,8 +395,27 @@ a {
   align-self: stretch;
 }
 
-.container {
-  width: 100%;
-  height: 100%;
-  background-color: black;
+.box {
+  padding: 0 50px 0 50px;
+  margin: 0 auto;
+}
+.box_sm {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.box_md {
+  max-width: 1600px;
+  margin: 0 auto;
+}
+.box_lg {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.box_xl {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.box_full {
+  max-width: 100%;
+  margin: 0 auto;
 }
