--- a/sass/components/_containers.scss
+++ b/sass/components/_containers.scss
@@ -1,5 +1,25 @@
-.container{
-    width: 100%;
-    height: 100%;
-    background-color: black;
+.box{
+    padding: 0 50px 0 50px;
+    margin: 0 auto;
+
+    &_sm{
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+    &_md{
+        max-width: 1600px;
+        margin: 0 auto;
+    }
+    &_lg{
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+    &_xl{
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+    &_full{
+        max-width: 100%;
+        margin: 0 auto;
+    }
 }
