Added the animations folder

--- a/css/index.css
+++ b/css/index.css
@@ -116,7 +116,7 @@ a {
 .bg-secondary-soft {
   background-color: #4a4a4a;
 }
-.bg-secondary-3dark {
+.bg-secondary-dark {
   background-color: #1b1b1b;
 }
 
