--- a/css/index.css
+++ b/css/index.css
@@ -396,26 +396,12 @@ a {
 }
 
 .box {
-  padding: 0 50px 0 50px;
-  margin: 0 auto;
-}
-.box-sm {
-  max-width: 1200px;
-  margin: 0 auto;
-}
-.box-md {
-  max-width: 1600px;
-  margin: 0 auto;
-}
-.box-lg {
-  max-width: 1200px;
-  margin: 0 auto;
-}
-.box-xl {
-  max-width: 1200px;
+  width: 80%;
+  padding: 0 20px 0 20px;
   margin: 0 auto;
 }
 .box-full {
   max-width: 100%;
+  padding: 0 20px 0 20px;
   margin: 0 auto;
 }
