--- a/sass/utilities/_unit.scss
+++ b/sass/utilities/_unit.scss
@@ -100,3 +100,45 @@
         width: 100%;
     }
 }
+// Padding
+.p{
+    &-1{
+        padding: 1em;
+    }
+    &-2{
+        padding: 2em;
+    }
+    &-3{
+        padding: 3em;
+    }
+    &-4{
+        padding: 4em;
+    }
+    &-5{
+        padding: 5em;
+    }
+    &-6{
+        padding: 6em;
+    }
+}
+// Margin
+.m{
+    &-1{
+        margin: 1em;
+    }
+    &-2{
+        margin: 2em;
+    }
+    &-3{
+        margin: 3em;
+    }
+    &-4{
+        margin: 4em;
+    }
+    &-5{
+        margin: 5em;
+    }
+    &-6{
+        margin: 6em;
+    }
+}
