--- a/sass/index.scss
+++ b/sass/index.scss
@@ -11,6 +11,7 @@
 @import "utilities/textColors";
 @import "utilities/unit";
 @import "utilities/font";
+@import "utilities/positions";
 
 // components(buttons, cards, navs, etc)
 @import "components/card";
