--- a/sass/utilities/_unit.scss
+++ b/sass/utilities/_unit.scss
@@ -121,6 +121,133 @@
         padding: 6em;
     }
 }
+
+.px{
+    &-1{
+        padding: 0 1em;
+    }
+    &-2{
+        padding: 0 2em;
+    }
+    &-3{
+        padding: 0 3em;
+    }
+    &-4{
+        padding: 0 4em;
+    }
+    &-5{
+        padding: 0 5em;
+    }
+    &-6{
+        padding: 0 6em;
+    }
+}
+
+.py{
+    &-1{
+        padding: 1em 0;
+    }
+    &-2{
+        padding: 2em 0;
+    }
+    &-3{
+        padding: 3em 0;
+    }
+    &-4{
+        padding: 4em 0;
+    }
+    &-5{
+        padding: 5em 0;
+    }
+    &-6{
+        padding: 6em 0;
+    }
+}
+
+.pt{
+    &-1{
+        padding-top: 1em;
+    }
+    &-2{
+        padding-top: 2em;
+    }
+    &-3{
+        padding-top: 3em;
+    }
+    &-4{
+        padding-top: 4em;
+    }
+    &-5{
+        padding-top: 5em;
+    }
+    &-6{
+        padding-top: 6em;
+    }
+}
+
+.pr{
+    &-1{
+        padding-right: 1em;
+    }
+    &-2{
+        padding-right: 2em;
+    }
+    &-3{
+        padding-right: 3em;
+    }
+    &-4{
+        padding-right: 4em;
+    }
+    &-5{
+        padding-right: 5em;
+    }
+    &-6{
+        padding-right: 6em;
+    }
+}
+
+.pb{
+    &-1{
+        padding-bottom: 1em;
+    }
+    &-2{
+        padding-bottom: 2em;
+    }
+    &-3{
+        padding-bottom: 3em;
+    }
+    &-4{
+        padding-bottom: 4em;
+    }
+    &-5{
+        padding-bottom: 5em;
+    }
+    &-6{
+        padding-bottom: 6em;
+    }
+}
+
+.pl{
+    &-1{
+        padding-left: 1em;
+    }
+    &-2{
+        padding-left: 2em;
+    }
+    &-3{
+        padding-left: 3em;
+    }
+    &-4{
+        padding-left: 4em;
+    }
+    &-5{
+        padding-left: 5em;
+    }
+    &-6{
+        padding-left: 6em;
+    }
+}
+
 // Margin
 .m{
     &-1{
@@ -140,5 +267,89 @@
     }
     &-6{
         margin: 6em;
+    }
+}
+
+.mt{
+    &-1{
+        margin-top: 1em;
+    }
+    &-2{
+        margin-top: 2em;
+    }
+    &-3{
+        margin-top: 3em;
+    }
+    &-4{
+        margin-top: 4em;
+    }
+    &-5{
+        margin-top: 5em;
+    }
+    &-6{
+        margin-top: 6em;
+    }
+}
+
+.mr{
+    &-1{
+        margin-right: 1em;
+    }
+    &-2{
+        margin-right: 2em;
+    }
+    &-3{
+        margin-right: 3em;
+    }
+    &-4{
+        margin-right: 4em;
+    }
+    &-5{
+        margin-right: 5em;
+    }
+    &-6{
+        margin-right: 6em;
+    }
+}
+
+.mb{
+    &-1{
+        margin-bottom: 1em;
+    }
+    &-2{
+        margin-bottom: 2em;
+    }
+    &-3{
+        margin-bottom: 3em;
+    }
+    &-4{
+        margin-bottom: 4em;
+    }
+    &-5{
+        margin-bottom: 5em;
+    }
+    &-6{
+        margin-bottom: 6em;
+    }
+}
+
+.ml{
+    &-1{
+        margin-left: 1em;
+    }
+    &-2{
+        margin-left: 2em;
+    }
+    &-3{
+        margin-left: 3em;
+    }
+    &-4{
+        margin-left: 4em;
+    }
+    &-5{
+        margin-left: 5em;
+    }
+    &-6{
+        margin-left: 6em;
     }
 }
