--- a/sass/components/_containers.scss
+++ b/sass/components/_containers.scss
@@ -1,5 +1,5 @@
 .box{
-    width: 80%;
+    width: 100%;
     padding: 0 20px 0 20px;
     margin: 0 auto;
 
@@ -9,3 +9,47 @@
         margin: 0 auto;
     }
 }
+
+@media screen and (max-width: 480px){
+    .box-sm{
+        width: 100%;
+        padding: 0 20px 0 20px;
+        margin: 0 auto;
+    }
+}
+
+
+@media screen and (max-width: 768px){
+    .box-md{
+        width: 80%;
+        padding: 0 20px 0 20px;
+        margin: 0 auto;
+    }
+}
+    
+@media screen and (max-width: 992px){
+    .box-lg{
+        width: 80%;
+        padding: 0 20px 0 20px;
+        margin: 0 auto;
+    }
+}
+
+@media screen and (max-width: 992px){
+    .box-lg{
+        width: 80%;
+        padding: 0 20px 0 20px;
+        margin: 0 auto;
+    }
+}
+
+@media screen and (max-width: 992px){
+    .box-lg{
+        width: 80%;
+        padding: 0 20px 0 20px;
+        margin: 0 auto;
+    }
+}
+
+
+
