--- a/sass/utilities/_border.scss
+++ b/sass/utilities/_border.scss
@@ -47,7 +47,7 @@
     }
 }
 // border-radius
-.br{
+.border-radius{
     border-radius: $border-sm-radius;
     &-1{
         border-radius: $border-md-radius;
