--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,3 +1,4 @@
+
 // Basic Reset
 @import "base";
 
@@ -18,9 +19,9 @@
 @import "components/containers";
 @import "components/button";
 @import "components/nav";
+@import "components/sidebar";
 
 // layout
 @import "layout";
-
 
 
