--- a/sass/utilities/_positions.scss
+++ b/sass/utilities/_positions.scss
@@ -23,6 +23,12 @@
         position: static;
     }
 
+    &-top{
+        position: absolute;
+        top: 0;
+        width: 100%;
+    }
+
     &-tr{
         position: absolute;
         top: 0;
