--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -2,8 +2,12 @@
 .grid {
     .grid-container {
         display: grid;
-        grid-template-columns: repeat(12, 1fr);
-        grid-auto-rows: minmax(100px, auto);
+        grid-template-columns: repeat(12, 1fr)
+    }
+    // row
+    &-row {
+        display: grid;
+        grid-template-columns: repeat(12, 1fr)
     }
     // columns
 
