media query for .box

--- a/css/index.css
+++ b/css/index.css
@@ -608,35 +608,21 @@ a:hover {
   margin: 0 auto;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 320px) {
   .box-sm {
     width: 100%;
     padding: 0 20px 0 20px;
     margin: 0 auto;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .box-md {
     width: 80%;
     padding: 0 20px 0 20px;
     margin: 0 auto;
   }
 }
-@media screen and (max-width: 992px) {
-  .box-lg {
-    width: 80%;
-    padding: 0 20px 0 20px;
-    margin: 0 auto;
-  }
-}
-@media screen and (max-width: 992px) {
-  .box-lg {
-    width: 80%;
-    padding: 0 20px 0 20px;
-    margin: 0 auto;
-  }
-}
-@media screen and (max-width: 992px) {
+@media screen and (min-width: 1024) {
   .box-lg {
     width: 80%;
     padding: 0 20px 0 20px;
@@ -905,4 +891,24 @@ aside[component=sidebar-right] {
 .justify-end {
   display: grid;
   justify-content: end;
+}
+.justify-between {
+  display: grid;
+  justify-content: space-between;
+}
+.justify-around {
+  display: grid;
+  justify-content: space-around;
+}
+.justify-evenly {
+  display: grid;
+  justify-content: space-evenly;
+}
+.justify-stretch {
+  display: grid;
+  justify-content: stretch;
+}
+.justify-baseline {
+  display: grid;
+  justify-content: baseline;
 }
